# adventofcode2021

./: README.md  adventofcode2021.cabal
lib/Data/: Matrix.hs
solutions/01p1/: Main.hs
solutions/01p2/: Main.hs
solutions/02p1/: Main.hs
solutions/02p2/: Main.hs
solutions/03p1/: Main.hs
solutions/03p2/: Main.hs
solutions/04p1/: Main.hs
solutions/04p2/: Main.hs
solutions/05p1/: Main.hs
solutions/05p2/: Main.hs
solutions/06p1/: Main.hs
solutions/06p2/: Main.hs
solutions/07p1/: Main.hs
solutions/07p2/: Main.hs
solutions/08p1/: Main.hs
solutions/08p2/: Main.hs
solutions/09p1/: Main.hs
solutions/09p2/: Main.hs
solutions/10p1/: Main.hs
solutions/10p2/: Main.hs
solutions/11p1/: Main.hs
solutions/11p2/: Main.hs
solutions/12p1/: Main.hs
solutions/12p2/: Main.hs
solutions/13p1/: Main.hs
solutions/13p2/: Main.hs
solutions/14p1/: Main.hs
solutions/14p2/: Main.hs
solutions/15p1/: Main.hs
solutions/15p2/: Main.hs
solutions/16p1/: Main.hs
solutions/16p2/: Main.hs
solutions/17p1/: Main.hs
solutions/17p2/: Main.hs
solutions/18p1/: Main.hs
solutions/18p2/: Main.hs
solutions/19p1/: Main.hs
solutions/19p2/: Main.hs
solutions/20p1/: Main.hs
solutions/20p2/: Main.hs
solutions/21p1/: Main.hs
solutions/21p2/: Main.hs
solutions/22p1/: Main.hs
solutions/22p2/: Main.hs
solutions/23p1/: Main.hs
solutions/23p2/: Main.hs
solutions/24p1/: Main.hs
solutions/24p2/: Main.hs
solutions/25p1/: Main.hs
